chore: adjust requirements

--- a/recipes/taxpasta/meta.yaml
+++ b/recipes/taxpasta/meta.yaml
@@ -21,10 +21,10 @@ requirements:
   host:
     - python >=3.8
     - setuptools >=40.6.0
-    - versioneer-518
     - wheel
-    - versioneer
     - pip
+    - hatch
+    - hatch-vcs
   run:
     - python >=3.8
     - depinfo >=2.1
@@ -33,6 +33,8 @@ requirements:
     - pandera
     - taxopy
     - typer
+    - biom-format
+    - pyarrow
 
 test:
   imports:
