--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,9 @@ jobs: # a basic unit of work in a run
       - run:
           name: Install bioconda-utils
           command: |
+            # Remove existing installation on runners
+            sudo rm -rf /usr/local/miniconda
+            sudo rm -rf /opt/miniconda
             sudo mkdir -p /opt/miniconda
             sudo chown -R $USER /opt/miniconda
             bash install-and-set-up-conda.sh
