--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs: # a basic unit of work in a run
       - run:
           name: Install bioconda-utils
           command: |
+            sudo mkdir -p /opt/miniconda
+            sudo chown -R $USER /opt/miniconda
             bash install-and-set-up-conda.sh
       - save_cache:
           key: bioconda-utils-{{ arch }}-{{ checksum "install-and-set-up-conda.sh" }}
