--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,8 @@ jobs: # a basic unit of work in a run
       - run:
           name: Install bioconda-utils
           command: |
-            sudo mkdir -p /opt/miniconda
-            sudo chown -R $USER /opt/miniconda
+            sudo mkdir -p /opt/mambaforge
+            sudo chown -R $USER /opt/mambaforge
             bash install-and-set-up-conda.sh
 
       - save_cache:
